Facebook changed to Anything

--- a/instaclone.html
+++ b/instaclone.html
@@ -17,7 +17,7 @@
 
 
       <!-- <img src="https://static1.squarespace.com/static/561d5e50e4b077f6ec6fab3d/t/593eb789e3df286fa0096489/1497282684467/FBlogo.png" alt="Not Connecting"> -->
-      <button id="b1" type="button" name="">Log in with the facebook</button>
+      <button id="b1" type="button" name="">Log in with the Anything</button>
 
       <p id="or"></p> <p id="or1">OR</p> <p id="or"></p>
 
